# tigps_analysis

./: .gitignore  README.md  pyproject.toml  tigps_w1_st_id_map.json  tigps_w1_st_value_maps.json
maps/: tigps_w1_p_value_maps.json  tigps_w1_s_id_map.json  tigps_w1_s_value_maps.json  tigps_w1_st_id_map.json  tigps_w1_st_value_maps.json  tigps_w1_t_id_map.json  tigps_w1_t_value_maps.json
src/: aa.py  dashboard_app.py  id_unique.py  main.ipynb  map_test.py  preprocessing.ipynb  target1.ipynb  target2.ipynb  target3.ipynb  target4.ipynb  tigps_w1_01_value_maps.json  tigps_w1_02_value_maps.json  tigps_w1_03_id_map.json  tigps_w1_03_value_maps.json  tigps_w1_04_id_map.json  tigps_w1_04_value_maps.json  tigps_w1_06_id_map.json  tigps_w1_06_value_maps.json  tigps_w1_f_id_map.json  tigps_w1_f_value_maps.json  tigps_w1_id_map.json  tigps_w1_p_id_map.json  tigps_w1_s_id_map.json  tigps_w1_s_value_maps.json  tigps_w1_sc_id_map.json  tigps_w1_st_id_map.json  tigps_w1_t_value_maps.json  tigps_w1_value_maps.json
src/.ipynb_checkpoints/: target1-checkpoint.ipynb  target4-checkpoint.ipynb
