[project]
name = "tigps-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "as123@Desktop",email = "as12345521117@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyterlab (>=4.4.0,<5.0.0)",
    "tabula (>=1.0.5,<2.0.0)",
    "dash (>=3.0.4,<4.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "dash-bootstrap-components (>=2.0.2,<3.0.0)",
    "streamlit (>=1.45.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
